Clock in Inimplementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--<service android:name=".GeofenceTransitionsIntentService"/>-->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -80,33 +81,33 @@
         <activity android:name=".supervisor.activities.ActivityMessageListing"
             android:theme="@style/AppTheme.DarkActionBar"/>
         <activity android:name=".supervisor.activities.ActivityViewMessage"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="View Message"/>
+            android:label="View Message"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityMessageMenu"
             android:theme="@style/AppTheme.DarkActionBar"
             />
         <activity android:name=".supervisor.activities.ActivityInventoryRequestsListing"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="Requests"/>
+            android:label="Requests"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityAssignTask"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="Assign Task"/>
+            android:label="Assign Task"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityViewReport"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="View Report"/>
+            android:label="View Report"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityReportListing"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="Reports"/>
+            android:label="Reports"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityChallenges"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="Challenges"/>
+            android:label="Challenges"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityLeaveApplication"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="Leave Application"/>
+            android:label="Leave Application"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".supervisor.activities.ActivityAttendanceReport"/>
         <activity android:name=".supervisor.activities.ActivityTaskListing"
-            android:theme="@style/AppTheme.DarkActionBar"
-            android:label="Task Listing"/>
+            android:label="Task Listing"
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".LoginActivity"
             android:label="Login"/>
         <activity android:name=".supervisor.activities.ActivityInventoryRequest"
