--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,7 @@
             android:label="New Message"
             android:theme="@style/AppTheme.DarkActionBar"/>
         <activity android:name=".supervisor.activities.ActivityMessageListing"
+            android:label="Messages"
             android:theme="@style/AppTheme.DarkActionBar"/>
         <activity android:name=".supervisor.activities.ActivityViewMessage"
             android:theme="@style/AppTheme.DarkActionBar"
