--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-feature android:name="android.hardware.camera"
         android:required="true" />
 
@@ -63,11 +62,11 @@
         <activity android:name=".attendance_module.AttendanceMainActivity" />
         <activity android:name=".alert_manager.AlertMainActivity" />
         <activity android:name=".supervisor_manager.SupervisorMainActivity" />
-        <activity android:name=".inventory_module.InventorySubMenu.ProductRequestActivity" />
-        <activity android:name=".inventory_module.InventorySubMenu.ReceivedInventoryActivity" />
-        <activity android:name=".inventory_module.InventorySubMenu.RemittanceRecordsActivity" />
-        <activity android:name=".inventory_module.InventorySubMenu.InventoryReportActivity" />
-        <activity android:name=".inventory_module.InventorySubMenu.SalesReportActivity" />
+        <activity android:name=".inventory_module.inventory_sub_menu.ProductRequestActivity" />
+        <activity android:name=".inventory_module.inventory_sub_menu.ReceivedInventoryActivity" />
+        <activity android:name=".inventory_module.inventory_sub_menu.RemittanceRecordsActivity" />
+        <activity android:name=".inventory_module.inventory_sub_menu.InventoryReportActivity" />
+        <activity android:name=".inventory_module.inventory_sub_menu.SalesReportActivity" />
         <activity android:name=".report_module.TaskReportListActivity" />
         <activity android:name=".report_module.SingleReportActivity" />
         <activity android:name=".attendance_module.attendance_sub_menu.AttendanceReportActivity" />
