--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity
             android:name=".report_module.ReportActivity"
             android:label="Write Report"
-            android:theme="@style/AppTheme.DarkActionBar"></activity>
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity android:name=".user_profile.UserProfileActivity" />
         <activity android:name=".user_profile.EditProfileActivity" />
         <activity android:name=".inventory_module.InventoryActivity" />
@@ -135,8 +135,7 @@
             android:name=".supervisor.activities.ActivityInventoryRequest"
             android:label="Inventory Request"
             android:theme="@style/AppTheme.DarkActionBar" />
-        <activity android:name=".report_module.ActivityVideoTrimmer"
-            />
+        <activity android:name=".report_module.ActivityVideoTrimmer" />
         <activity
             android:name=".report_module.VideoPlayer"
             android:label="Video Player"
@@ -148,6 +147,7 @@
         <service
             android:name=".services.FieldMonitorReportUploadService"
             android:label="FieldMonitorReportUploadService" />
+        <service android:name=".services.FieldMonitorRecordService" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -159,28 +159,24 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".inventory_module.inventory_sub_menu.ActivityAddRemit"
+        <activity
+            android:name=".inventory_module.inventory_sub_menu.ActivityAddRemit"
             android:label="Enter Record"
-            android:theme="@style/AppTheme.DarkActionBar"
-            />
-
-        <activity android:name=".supervisor.activities.CustomPhotoGalleryActivity"
-
-            />
-
+            android:theme="@style/AppTheme.DarkActionBar" />
+        <activity android:name=".supervisor.activities.CustomPhotoGalleryActivity" />
         <activity
             android:name=".report_module.ActivityWorkerReportListing"
             android:label="My Reports"
-            android:theme="@style/AppTheme.DarkActionBar"
-
-            />
-
+            android:theme="@style/AppTheme.DarkActionBar" />
         <activity
             android:name=".report_module.ActivityNurseViewReport"
             android:label="View Report"
-            android:theme="@style/AppTheme.DarkActionBar"
+            android:theme="@style/AppTheme.DarkActionBar" />
 
-            />
+        <service
+            android:name=".services.FieldMonitorTaskService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
