--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -176,7 +176,9 @@
         <service
             android:name=".services.FieldMonitorTaskService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".report_module.RecordActivity"></activity>
     </application>
 
 </manifest>
