--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url uri('mint-plugin-repo-5.2.2')
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +23,9 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven {
+            url uri('mint-plugin-repo-5.2.2')
+        }
     }
 }
 
