--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     defaultConfig {
         applicationId "com.example.titomi.workertrackerloginmodule"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         multiDexEnabled true
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         useLibrary 'org.apache.http.legacy'
@@ -50,14 +50,15 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     // compile 'com.android.support:design:27.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+//    implementation 'com.google.android.material:material:1.0.0-alpha1'
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.splunk:mint-android-sdk:5.2.2'
     implementation 'com.google.android.gms:play-services-location:15.0.0'
-    implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     //  implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -65,7 +66,7 @@ dependencies {
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-places:15.0.0'
     implementation 'com.google.android.gms:play-services-identity:15.0.0'
     implementation 'com.google.android.gms:play-services-location:15.0.0'
