- Task Listing error fix. The error was that when a nurse has an ongoing task the supervisior will not be able to clock in. - Map added to the Task Listing Activity to further toggle the location gps and giving the nurses a better visual representation of where they are
- Fix left undone, ordering task by date assigned

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -180,16 +180,19 @@
             android:name=".supervisor.activities.ActivityAddInstitution"
             android:label="New Institution"
             android:theme="@style/AppTheme.DarkActionBar" />
+        <activity
+            android:name=".supervisor.activities.ActivityTaskMap"
+            android:label="Map Activity in Task Listing"
+            android:theme="@style/AppTheme.DarkActionBar" />
 
         <service
             android:name=".services.FieldMonitorTaskService"
             android:enabled="true"
-            android:exported="true"
             android:label="FieldMonitorTaskService" />
         <service
             android:name=".services.FieldMonitorLocationService"
             android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false" />
     </application>
 
 </manifest>
